--- a/SS/src/.deps/ss-ss.Po
+++ b/SS/src/.deps/ss-ss.Po
@@ -89,7 +89,7 @@ ss-ss.o: ss.c /usr/include/stdc-predef.h config.h /usr/include/stdio.h \
  /usr/include/libxml2/libxml/xlink.h /usr/include/libxml2/libxml/SAX2.h \
  /usr/include/libxml2/libxml/xmlmemory.h \
  /usr/include/libxml2/libxml/threads.h \
- /usr/lib/gcc/x86_64-linux-gnu/5/include/stdbool.h
+ /usr/lib/gcc/x86_64-linux-gnu/5/include/stdbool.h andl.h
 
 /usr/include/stdc-predef.h:
 
@@ -344,3 +344,5 @@ util.h:
 /usr/include/libxml2/libxml/threads.h:
 
 /usr/lib/gcc/x86_64-linux-gnu/5/include/stdbool.h:
+
+andl.h:
